Saving - it works, ish (still breaks on window resize) but I want to see about doing some major re-wirtes to how the absolute and fixed positioning work, and am going to create a new branch

--- a/css/waypoint-style.css
+++ b/css/waypoint-style.css
@@ -33,6 +33,7 @@ html {
 	padding: 60px 20px 80px 20px;
 	transition: left 0.5s ease;
 	transition: opacity 0.5s ease, visibility 0.5s ease;
+	display: none;
 }
 
 
